--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -585,10 +585,12 @@ input[type="radio"] {
 	border: 0;
 	display: inline-block;
 	position: relative;
+  z-index: 0;
 
 	img {
 		border-radius: _size(border-radius);
 		display: block;
+    z-index: 0;
 	}
 
 	&.left {
@@ -1058,13 +1060,14 @@ table {
     // padding: 1em;
     position: absolute;
     // right: em;
-    // z-index: 2;
+    z-index: 9999;
     height: 100%;
     width: 100%;
   }
   .nav-button {
-    // z-index: 2;
+    z-index: 9999;
     width: 100%;
+    // position: absolute;
   }
   #compass-icon {
     // display: flex;
